# TREESEARCH

./: .dockerignore  Dockerfile.hud  README.md  env.py  example_convo.txt  pyproject.toml  tasks.py  test_run_simulation.py
.hud/: config.json
Farm/: __init__.py  actions.py  objects.py  spec.py  strategies.py  textsim.py
hud-blank/: env.py  tasks.py
